Extracting desc, price, url & ratings

--- a/Amazon Web Scraper.ipynb
+++ b/Amazon Web Scraper.ipynb
@@ -42,8 +42,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "5ed85689",
+   "execution_count": 14,
+   "id": "d7571e41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,8 +53,267 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "id": "8c8063dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_url(search_term):\n",
+    "    template = \"https://www.amazon.in/s?k={}&ref=nb_sb_noss_2\"\n",
+    "    search_term = search_term.replace(' ', '+')\n",
+    "    \n",
+    "    url = template.format(search_term)\n",
+    "    url += '&page{ }' \n",
+    "    return url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "cb5c10b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://www.amazon.in/s?k=ultrawide+monitor&ref=nb_sb_noss_2\n"
+     ]
+    }
+   ],
+   "source": [
+    "url = get_url('ultrawide monitor')\n",
+    "print(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "779bee4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "driver.get(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "455d8f9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "soup = BeautifulSoup(driver.page_source, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "7402998b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = soup.find_all('div', {'data-component-type': 's-search-result'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "541e34c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "36b1e50c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "item = results[0]\n",
+    "atag = item.h2.a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "86dabadf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LG UltraWide 34 Inch WFHD (2560 x 1080) IPS Display - HDR 10, AMD Free sync, sRGB 99%, Multitasking and Gaming Monitor - 34WL500\n"
+     ]
+    }
+   ],
+   "source": [
+    "description = atag.text.strip()\n",
+    "print(description)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "b452c21f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://www.amazon.in/gp/slredirect/picassoRedirect.html/ref=pa_sp_atf_aps_sr_pg1_1?ie=UTF8&adId=A08705441PEQ45MBCRBM6&url=%2FLG-UltraWide-Inch-WFHD-Display%2Fdp%2FB08CF4LZT1%2Fref%3Dsr_1_1_sspa%3Fdchild%3D1%26keywords%3Dultrawide%2Bmonitor%26qid%3D1627210161%26sr%3D8-1-spons%26psc%3D1&qualifier=1627210161&id=4555384618752665&widgetName=sp_atf\n"
+     ]
+    }
+   ],
+   "source": [
+    "product_url = 'https://www.amazon.in' + atag.get('href')\n",
+    "print(product_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "c3afd3f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "₹27,999\n"
+     ]
+    }
+   ],
+   "source": [
+    "price_parent = item.find('span', 'a-price')\n",
+    "price = price_parent.find('span', 'a-offscreen').text\n",
+    "print(price)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "85ca7530",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.3 out of 5 stars\n"
+     ]
+    }
+   ],
+   "source": [
+    "rating = item.i.text\n",
+    "print(rating)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "f43cc72f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "review_count = item.find('span', {'class':'a-size-base', 'dir':'auto'})\n",
+    "print(review_count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "6bdfe179",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_record(item):\n",
+    "    atag = item.h2.a\n",
+    "    description = atag.text.strip()\n",
+    "    product_url = 'https://www.amazon.in' + atag.get('href')\n",
+    "    try:\n",
+    "        price_parent = item.find('span', 'a-price')\n",
+    "        price = price_parent.find('span', 'a-offscreen').text\n",
+    "    except AttributeError:\n",
+    "        return\n",
+    "    try: \n",
+    "        rating = item.i.text\n",
+    "    except AttributeError:\n",
+    "        rating = ''\n",
+    "    \n",
+    "    result = (description,price,rating,product_url)\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "3c89f82c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "records = []\n",
+    "results = soup.find_all('div', {'data-component-type': 's-search-result'})\n",
+    "\n",
+    "for item in results:\n",
+    "    record = extract_record(item)\n",
+    "    if record:\n",
+    "        records.append(record)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "0ba66d2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('LG UltraWide 34 Inch WFHD (2560 x 1080) IPS Display - HDR 10, AMD Free sync, sRGB 99%, Multitasking and Gaming Monitor - 34WL500',\n",
+       " '₹27,999',\n",
+       " '4.3 out of 5 stars',\n",
+       " 'https://www.amazon.in/gp/slredirect/picassoRedirect.html/ref=pa_sp_atf_aps_sr_pg1_1?ie=UTF8&adId=A08705441PEQ45MBCRBM6&url=%2FLG-UltraWide-Inch-WFHD-Display%2Fdp%2FB08CF4LZT1%2Fref%3Dsr_1_1_sspa%3Fdchild%3D1%26keywords%3Dultrawide%2Bmonitor%26qid%3D1627210161%26sr%3D8-1-spons%26psc%3D1&qualifier=1627210161&id=4555384618752665&widgetName=sp_atf')"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "records[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "7acee18a",
+   "id": "5f70b984",
    "metadata": {},
    "outputs": [],
    "source": []
