Added all the neccesary functions

--- a/Amazon Web Scraper.ipynb
+++ b/Amazon Web Scraper.ipynb
@@ -36,14 +36,13 @@
    ],
    "source": [
     "from webdriver_manager.chrome import ChromeDriverManager\n",
-    "\n",
     "driver = webdriver.Chrome(ChromeDriverManager().install())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "678da451",
+   "id": "95b31612",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,8 +52,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "1858259d",
+   "execution_count": 48,
+   "id": "6a175c69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,21 +62,21 @@
     "    search_term = search_term.replace(' ', '+')\n",
     "    \n",
     "    url = template.format(search_term)\n",
-    "    url += '&page{ }' \n",
+    "    url += '&page{}' \n",
     "    return url"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "12bb7c1d",
+   "execution_count": 49,
+   "id": "34a1277c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://www.amazon.in/s?k=ultrawide+monitor&ref=nb_sb_noss_2&page{ }\n"
+      "https://www.amazon.in/s?k=ultrawide+monitor&ref=nb_sb_noss_2&page{}\n"
      ]
     }
    ],
@@ -89,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "93ff1513",
+   "id": "7eff532f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "6ebe3e07",
+   "id": "5b804aab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "47d7393b",
+   "id": "8fa4fe27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "4fac0ea6",
+   "id": "8b8c6df2",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "049c022f",
+   "id": "ffe71162",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "900446c5",
+   "id": "bbda5715",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "0e826ce2",
+   "id": "d9c00240",
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "4c991bbd",
+   "id": "04f98eee",
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "6f31da62",
+   "id": "dbac7397",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "2155b5df",
+   "id": "d944d410",
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "3559356a",
+   "id": "24f41c84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "c022af33",
+   "id": "ba5e3d41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "e9a044b0",
+   "id": "cefc6ff9",
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +312,116 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f25d0dd3",
+   "id": "28554695",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7461c639",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c0ace66",
+   "metadata": {},
+   "source": [
+    "## Compiled Form"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "2df9e384",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "from bs4 import BeautifulSoup\n",
+    "from selenium import webdriver\n",
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "\n",
+    "def get_url(search_term):\n",
+    "    template = \"https://www.amazon.in/s?k={}&ref=nb_sb_noss_2\"\n",
+    "    search_term = search_term.replace(' ', '+')\n",
+    "    \n",
+    "    url = template.format(search_term)\n",
+    "    url += '&page{}' \n",
+    "    return url\n",
+    "\n",
+    "def extract_record(item):\n",
+    "    atag = item.h2.a\n",
+    "    description = atag.text.strip()\n",
+    "    product_url = 'https://www.amazon.in' + atag.get('href')\n",
+    "    try:\n",
+    "        price_parent = item.find('span', 'a-price')\n",
+    "        price = price_parent.find('span', 'a-offscreen').text\n",
+    "    except AttributeError:\n",
+    "        return\n",
+    "    try: \n",
+    "        rating = item.i.text\n",
+    "    except AttributeError:\n",
+    "        rating = ''\n",
+    "    \n",
+    "    result = (description,price,rating,product_url)\n",
+    "    return result\n",
+    "\n",
+    "def main(search_term):\n",
+    "    driver = webdriver.Chrome(ChromeDriverManager().install())\n",
+    "    record = []\n",
+    "    url = get_url(search_term)\n",
+    "    try:\n",
+    "        for page in range(1,21):\n",
+    "            driver.get(url.format(page))\n",
+    "            soup = BeautifulSoup(driver.page_source, 'html.parser')\n",
+    "            results = soup.find_all('div', {'data-component-type': 's-search-result'})\n",
+    "\n",
+    "            for item in results:\n",
+    "                record = extract_record(item)\n",
+    "                if record:\n",
+    "                    records.append(record)\n",
+    "    except AttributeError:\n",
+    "        return\n",
+    "    driver.close()\n",
+    "    \n",
+    "    with open('OutputCSV/ultrawide-monitor.csv','w',newline='', encoding='utf-8') as f:\n",
+    "        writer = csv.writer(f)\n",
+    "        writer.writerow(['Description', 'Price', 'Rating', 'Product URL'])\n",
+    "        writer.writerows(records)\n",
+    "                "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "4a63b0cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "====== WebDriver manager ======\n",
+      "Current google-chrome version is 91.0.4472\n",
+      "Get LATEST driver version for 91.0.4472\n",
+      "Driver [/Users/arpit_singh/.wdm/drivers/chromedriver/mac64/91.0.4472.101/chromedriver] found in cache\n"
+     ]
+    }
+   ],
+   "source": [
+    "main('ultrawide monitor')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c1e4c8c",
    "metadata": {},
    "outputs": [],
    "source": []
